--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -23,6 +23,7 @@ body {
     width: 280px;
     height: 280px;
     margin: 40px auto;
+    transform: rotate(-90deg);
 }
 
 .timer-ring {
@@ -55,7 +56,7 @@ circle {
     border-radius: 50%;
     top: 0;
     left: 50%;
-    transform-origin: center 140px;
+    transform-origin: 50% 140px;
     transform: translate(-50%, -50%);
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(91, 127, 255, 0.5);
@@ -77,7 +78,7 @@ circle {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) rotate(90deg);
     text-align: center;
 }
 
