--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -27,7 +27,6 @@ body {
 }
 
 .timer-ring {
-    transform: rotate(-90deg);
     width: 100%;
     height: 100%;
 }
@@ -57,9 +56,10 @@ circle {
     top: 0;
     left: 50%;
     transform-origin: 50% 140px;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) rotate(0deg);
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(91, 127, 255, 0.5);
+    transition: transform 0.1s ease;
 }
 
 .handle::after {
@@ -80,6 +80,7 @@ circle {
     left: 50%;
     transform: translate(-50%, -50%) rotate(90deg);
     text-align: center;
+    user-select: none;
 }
 
 .time {
