--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -58,7 +58,6 @@ circle {
     top: 0;
     left: 50%;
     transform-origin: center 140px;
-    /* Начальное положение на 12 часов */
     transform: translate(-50%, -50%) rotate(0deg);
     cursor: pointer;
     box-shadow: 0 2px 10px rgba(91, 127, 255, 0.5);
@@ -83,6 +82,9 @@ circle {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     user-select: none;
 }
 
@@ -158,8 +160,7 @@ circle {
 .time {
     font-size: 64px;
     font-weight: 300;
-    display: block;
-    transition: all 0.3s;
+    margin: 10px 0;
 }
 
 .label {
